
BUG FIXES:

 o Calling future_lapply() with functions containing globals part of non-default
   packages would when using batchtools futures give an error complaining that
   the global is missing. This was due to updates in future (>= 1.4.0) that
   broke this package.

 o loggedOutput() for BatchtoolsFuture would always return NULL unless an error
   had occured.


Version: 0.14.1 [2017-05-30]

DOCUMENTATION:

 o Removing remaining references to 'eager' (now using 'sequential').

SOFTWARE QUALITY:

 o Testing future_lapply() for batchjobs backends.

 o TESTS: No longer testing with (deprecated) 'lazy' or 'eager' backends.
 

Version: 0.14.0 [2017-03-18]

NEW FEATURES:

 o The number of jobs one can add to the queues of HPC schedulers is in
   principle unlimited, which is why the number of available workers for
   such batchjobs_* backends is reported as +Inf.  However, as the number
   of workers is used by future_lapply() to decide how many futures should
   be used to best partition the elements, this means that future_lapply()
   will always use one future per element.  Because of this, it is now
   possible to specify plan(batchjobs_*, workers = n) where 'n' is the
   target number of workers.
 
 o Option 'future.wait.timeout' (replaces 'future.wait.times') specifies
   the maximum waiting time for BatchJobs futures to finish before
   generating a timeout error.

BUG FIX:

 o Futures with globals would give an error when using the developers
   version of BatchJobs (> 1.6) with globals (<= 0.7.1).  Package now
   requires future (>= 1.4.0) which in turn requires globals (>= 0.8.0).

DEPRECATED AND DEFUNCT:

 o Previously deprecated batchjobs() and backend() functions are defunct.
   Instead, use one of the corresponding batchjobs_*() functions.
 

Version: 0.13.1 [2016-10-20]

NEW FEATURES:

 o Added argument 'job.delay' to batchjobs_*() futures for passing
   it as is to BatchJobs::submitJobs() used when launching futures.
   