@@ -14,8 +14,6 @@ S3method(value,BatchJobsFuture)
 export("%resources%")
 export(BatchJobsFuture)
 export(BatchJobsFutureError)
-export(backend)
-export(batchjobs)
 export(batchjobs_custom)
 export(batchjobs_interactive)
 export(batchjobs_local)
